<?xml version="1.0" encoding="utf-8"?>
<ScrollView
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
    tools:context=".ActulizarNota.Actualizar_Nota">

<androidx.appcompat.widget.LinearLayoutCompat
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp">

    <!--ID NOTA-->
    <TextView
        android:id="@+id/Id_nota_A"
        android:text="@string/Id_nota_A"
        android:textSize="18sp"
        android:visibility="gone"
        android:fontFamily="@font/worksans"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <!--UID DEL USUARIO-->
    <TextView
        android:id="@+id/Uid_Usuario_A"
        android:hint="@string/Uid_Usuario_A"
        android:textSize="18sp"
        android:visibility="gone"
        android:fontFamily="@font/worksans"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <!--CORREO DEL USUARIO-->
    <TextView
        android:id="@+id/Correo_usuario_A"
        android:hint="@string/Correo_usuario_A"
        android:textSize="18sp"
        android:visibility="gone"
        android:fontFamily="@font/worksans"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <!--FECHA DE REGISTRO-->
    <TextView
        android:id="@+id/Fecha_registro_A"
        android:hint="@string/Fecha_registro_A"
        android:textSize="18sp"
        android:visibility="gone"
        android:fontFamily="@font/worksans"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <!--ESTADO DE LA NOTA-->
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/Tarea_Finalizada"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:visibility="gone"
            android:background="#16A085"/>

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/Tarea_No_Finalizada"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:visibility="gone"
            android:layout_marginStart="5dp"
            android:background="#E74C3C"/>


        <TextView
            android:id="@+id/Estado_A"
            android:text="@string/Estado_A"
            android:textSize="20sp"
            android:fontFamily="@font/worksans"
            android:layout_marginStart="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </androidx.appcompat.widget.LinearLayoutCompat>

    <!--TITULO-->
    <EditText
        android:id="@+id/Titulo_A"
        android:hint="@string/Titulo_A"
        android:textSize="25sp"
        android:textStyle="bold"
        android:fontFamily="@font/worksans"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <!--DESCRIPCION-->
    <EditText
        android:id="@+id/Descripcion_A"
        android:hint="@string/Descripcion_A"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        android:minHeight="150dp"
        android:gravity="start"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <!--BOTÓN PARA ABRIR CALENDARIO-->
        <Button
            android:id="@+id/Btn_Calendario_A"
            android:text="@string/Btn_Calendario_A"
            app:icon="@drawable/icono_calendario"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <!--VISUALIZAR FECHA ELEGIDA-->
        <TextView
            android:id="@+id/Fecha_A"
            android:hint="@string/Fecha_A"
            android:textSize="20sp"
            android:layout_marginStart="15dp"
            android:fontFamily="@font/worksans"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">

        <Spinner
            android:id="@+id/Spinner_estado"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"/>

        <TextView
            android:id="@+id/Estado_nuevo"
            android:text="@string/Estado_nuevo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </androidx.appcompat.widget.LinearLayoutCompat>


</androidx.appcompat.widget.LinearLayoutCompat>

</ScrollView>